Episode List Added

--- a/TvGram/home.html
+++ b/TvGram/home.html
@@ -17,9 +17,9 @@
 		<button class="btn btn-dark" type="button" id="srchBtn"><img src="assets/searchicon.svg"
 				alt="searchIcon"></button>
 	</div>
-	<div class="container mb-4 rounded p-1" style="max-width: 46em;">
-		<div class="container border rounded  p-2">
-			<div class="row border-bottom">
+	<div class="container mb-4 rounded border p-1" style="max-width: 46em;">
+		<div class="container border rounded mb-2 p-2">
+			<div class="row">
 				<div class="col-md-4 border-end info mb-1">
 					<img src="https://static.tvmaze.com/uploads/images/medium_portrait/209/523206.jpg" alt="showPoster"
 						class="rounded shadow mb-2">
@@ -65,29 +65,49 @@
 			</div>
 
 		</div>
-		<div class="container">
-			<div class="card mb-3">
-				<img src="https://static.tvmaze.com/uploads/images/original_untouched/216/540337.jpg"
-					class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Famous Last Words.</h5>
-					<p class="card-text border-bottom border-dark">Miles strikes up a friendship with his roommate Chip
-						"The
-						Colonel" Martin and
-						fellow classmate Takumi, who introduce him to the various characters around the school,
-						including their enemies the Weekday Warriors and the dean Mr Starnes, better known by students
-						as The Eagle. But when Miles meets The Colonel's best friend Alaska Young, her whirlwind
-						personality leaves him smitten. Happy to have finally found a place where he belongs, it's the
-						start of the adventure Miles has been craving.</p>
-					<p class="card-text">Season: <small class="text-muted">1</small></p>
-					<p class="card-text">Episode: <small class="text-muted">1</small></p>
+		<div class="episodes container">
+			<div class="card mb-3 p-2">
+				<div class="row g-0 align-items-center border-bottom">
+					<div class="col-md-4">
+						<img src="https://static.tvmaze.com/uploads/images/medium_landscape/216/540337.jpg"
+							class="img-fluid rounded shadow ms-3 mb-3" alt="Show Poster">
+					</div>
+					<div class="col-md-8">
+						<ul class="list-items font-monospace ps-1">
+							<li class="list-group-item">Title: <span>Famous Last Words</span></li>
+							<li class="list-group-item">First Air: <span>Fri Oct 18 2019</span></li>
+							<li class="list-group-item">Episode: <span>1</span></li>
+							<li class="list-group-item">Season: <span>1</span></li>
+						</ul>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="card-body p-1">
+							<p class="card-text">
+								Miles strikes up a friendship with his roommate Chip "The Colonel" Martin and fellow
+								classmate Takumi, who introduce him to the various characters around the school,
+								including their enemies the Weekday Warriors and the dean Mr Starnes, better known by
+								students as The Eagle. But when Miles meets The Colonel's best friend Alaska Young, her
+								whirlwind personality leaves him smitten. Happy to have finally found a place where he
+								belongs, it's the start of the adventure Miles has been craving.
+							</p>
+						</div>
+					</div>
 				</div>
 			</div>
-
 		</div>
+
+		<!-- https://static.tvmaze.com/uploads/images/medium_landscape/216/540337.jpg -->
+		<!-- 
+		Miles strikes up a friendship with his roommate Chip \"The Colonel\" Martin and fellow
+								classmate Takumi, who introduce him to the various characters around the school,
+								including their enemies the Weekday Warriors and the dean Mr Starnes, better known by
+								students as The Eagle. But when Miles meets The Colonel's best friend Alaska Young, her
+								whirlwind personality leaves him smitten. Happy to have finally found a place where he
+								belongs, it's the start of the adventure Miles has been craving. -->
 	</div>
 
-	</div>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
