Season button markup added

--- a/TvGram/home.html
+++ b/TvGram/home.html
@@ -17,8 +17,8 @@
 		<button class="btn btn-dark" type="button" id="srchBtn"><img src="assets/searchicon.svg"
 				alt="searchIcon"></button>
 	</div>
-	<div class="container mb-4 rounded border p-1" style="max-width: 46em;">
-		<div class="container border rounded mb-2 p-2">
+	<main class="container mb-4 rounded border p-1" style="max-width: 46em;">
+		<section class="container border rounded mb-2 p-2">
 			<div class="row">
 				<div class="col-md-4 border-end info mb-1">
 					<img src="https://static.tvmaze.com/uploads/images/medium_portrait/209/523206.jpg" alt="showPoster"
@@ -63,9 +63,29 @@
 					Perhaps,
 					and steals his heart. Then. . . After. Nothing is ever the same.</p>
 			</div>
-
+		</section>
+		<div class="btn-group-vertical ps-2 font-monospace" role="group">
+			<button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"
+				aria-expanded="false">
+				Season <span class="badge bg-dark">1</span>
+			</button>
+			<ul class="dropdown-menu p-1" aria-labelledby="btnGroupDrop1">
+				<p class="text-center">No More Seasons!</p>
+				<!-- <li>
+					<button class="dropdown-item btn btn-outline-primary mb-2">1</button>
+				</li>
+				<li>
+					<button class="dropdown-item btn btn-outline-primary mb-2">1</button>
+				</li>
+				<li>
+					<button class="dropdown-item btn btn-outline-primary mb-2 active">1</button>
+				</li>
+				<li>
+					<button class="dropdown-item btn btn-outline-primary mb-2">1</button>
+				</li> -->
+			</ul>
 		</div>
-		<div class="episodes container">
+		<section class="episodes container mt-2">
 			<div class="card mb-3 p-2">
 				<div class="row g-0 align-items-center border-bottom">
 					<div class="col-md-4">
@@ -96,7 +116,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 
 		<!-- https://static.tvmaze.com/uploads/images/medium_landscape/216/540337.jpg -->
 		<!-- 
@@ -106,7 +126,7 @@
 								students as The Eagle. But when Miles meets The Colonel's best friend Alaska Young, her
 								whirlwind personality leaves him smitten. Happy to have finally found a place where he
 								belongs, it's the start of the adventure Miles has been craving. -->
-	</div>
+	</main>
 
 
 </body>
