--- a/TvGram/home.html
+++ b/TvGram/home.html
@@ -30,14 +30,12 @@
 		</div>
 	</nav>
 
-
 	<main class="container show-container mb-4 p-1" style="max-width: 46em;">
-
+<!-- Below Section is for Seasons dropDown buttons! -->
 		<section class="btns">
-
 		</section>
+<!-- 	Below Section is for Episodes card to store	 -->
 		<section class="episodes container mt-2">
-
 		</section>
 
 	</main>
